-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.0 Beta
-
None
-
Windows 8.1, Msvc 2013
-
a6ef446d4c57b8f3d8a4f4dd85e98baba1583b2d 8a401371ea6baeb827c7fa57befd5e183949fca7
Font rendering on Windows suddenly looks bad. That must be a very recent regression. Seems to happen in QPainter based GUI, not in QML.

There is a runtime warning:
QWindowsFontEngineDirectWrite::imageForGlyph: CreateAlphaTexture failed ()
qtdiag (no scaling, good text)
Screens: 2, High DPI scaling: inactive # 0 "\\.\DISPLAY1" Depth: 32 Primary: yes Geometry: 2880x1620+0+0 Available: 2880x1548+0+0 Virtual geometry: 4800x2160+0+-540 Available: 4800x2088+0+-540 2 virtual siblings Physical size: 344x193 mm Refresh: 60 Hz Power state: 0 Physical DPI: 212.651,213.202 Logical DPI: 192,192 DevicePixelRatio: 1 Pixel density: 2 Primary orientation: 2 Orientation: 2 Native orientation: 0 OrientationUpdateMask: 0 # 1 "\\.\DISPLAY2" Depth: 32 Primary: no Geometry: 1920x1080+2880+-540 Available: 1920x1080+2880+-540 Virtual geometry: 4800x2160+0+-540 Available: 4800x2088+0+-540 2 virtual siblings Physical size: 527x296 mm Refresh: 59 Hz Power state: 0 Physical DPI: 92.5389,92.6757 Logical DPI: 192,192 DevicePixelRatio: 1 Pixel density: 2 Primary orientation: 2 Orientation: 2 Native orientation: 0 OrientationUpdateMask: 0
qtdiag (scaling, bad text)
Screens: 2, High DPI scaling: active # 0 "\\.\DISPLAY1" Depth: 32 Primary: yes Geometry: 1440x810+0+0 (native: 2880x1620+0+0) Available: 1440x774+0+0 Virtual geometry: 3840x1350+0+-540 Available: 3840x1314+0+-540 2 virtual siblings Physical size: 344x193 mm Refresh: 60 Hz Power state: 0 Physical DPI: 106.326,106.601 Logical DPI: 96,96 (native: 192,192) High DPI scaling factor: 2 DevicePixelRatio: 2 Pixel density: 2 Primary orientation: 2 Orientation: 2 Native orientation: 0 OrientationUpdateMask: 0 # 1 "\\.\DISPLAY2" Depth: 32 Primary: no Geometry: 960x540+2880+-540 (native: 1920x1080+2880+-540) Available: 960x540+2880+-540 Virtual geometry: 3840x1350+0+-540 Available: 3840x1314+0+-540 2 virtual siblings Physical size: 527x296 mm Refresh: 59 Hz Power state: 0 Physical DPI: 46.2694,46.3378 Logical DPI: 96,96 (native: 192,192) High DPI scaling factor: 2 DevicePixelRatio: 2 Pixel density: 2 Primary orientation: 2 Orientation: 2 Native orientation: 0 OrientationUpdateMask: 0
- resulted in
-
QTBUG-50024 [REG 5.5->5.6]: Non-ClearType text rendering has an 1x1 offset (Windows)
-
- Closed
-